syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.graphoenix.introspection.grpc";

package io.graphoenix.introspection;

import "io/graphoenix/introspection/enums.proto";
import "io/graphoenix/introspection/objects.proto";
import "io/graphoenix/introspection/interfaces.proto";
import "io/graphoenix/introspection/input_objects.proto";
import "google/protobuf/timestamp.proto";

message MutationIntroSchemaRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    repeated IntroTypeInput types = 4; /* types */
    IntroTypeInput query_type = 5; /* queryType */
    IntroTypeInput mutation_type = 6; /* mutationType */
    IntroTypeInput subscription_type = 7; /* subscriptionType */
    repeated IntroDirectiveInput directives = 8; /* directives */
    bool is_deprecated = 9; /* Is Deprecated */
    int32 version = 10; /* Version */
    int32 realm_id = 11; /* Realm ID */
    string create_user_id = 12; /* Create User ID */
    google.protobuf.Timestamp create_time = 13; /* Create Time */
    string update_user_id = 14; /* Update User ID */
    google.protobuf.Timestamp update_time = 15; /* Update Time */
    string create_group_id = 16; /* Create Group ID */
    string intro_typename = 17; /* Type Name */
    string query_type_name = 18; /* queryType Reference */
    string mutation_type_name = 19; /* mutationType Reference */
    string subscription_type_name = 20; /* subscriptionType Reference */
    IntroSchemaInput input = 21; /* Input */
    IntroSchemaExpression where = 22; /* Where */
}
message MutationIntroSchemaListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    repeated IntroTypeInput types = 4; /* types */
    IntroTypeInput query_type = 5; /* queryType */
    IntroTypeInput mutation_type = 6; /* mutationType */
    IntroTypeInput subscription_type = 7; /* subscriptionType */
    repeated IntroDirectiveInput directives = 8; /* directives */
    bool is_deprecated = 9; /* Is Deprecated */
    int32 version = 10; /* Version */
    int32 realm_id = 11; /* Realm ID */
    string create_user_id = 12; /* Create User ID */
    google.protobuf.Timestamp create_time = 13; /* Create Time */
    string update_user_id = 14; /* Update User ID */
    google.protobuf.Timestamp update_time = 15; /* Update Time */
    string create_group_id = 16; /* Create Group ID */
    string intro_typename = 17; /* Type Name */
    string query_type_name = 18; /* queryType Reference */
    string mutation_type_name = 19; /* mutationType Reference */
    string subscription_type_name = 20; /* subscriptionType Reference */
    repeated IntroSchemaInput list = 21; /* Input List */
    IntroSchemaExpression where = 22; /* Where */
}
message MutationIntroTypeRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    string name = 4; /* name */
    IntroSchemaInput of_schema = 5; /* ofSchema */
    IntroTypeKind kind = 6; /* kind */
    string description = 7; /* description */
    repeated IntroFieldInput fields = 8; /* fields */
    repeated IntroTypeInput interfaces = 9; /* interfaces */
    repeated IntroTypeInput possible_types = 10; /* possibleTypes */
    repeated IntroEnumValueInput enum_values = 11; /* enumValues */
    repeated IntroInputValueInput input_fields = 12; /* inputFields */
    IntroTypeInput of_type = 13; /* ofType */
    bool is_deprecated = 14; /* Is Deprecated */
    int32 version = 15; /* Version */
    int32 realm_id = 16; /* Realm ID */
    string create_user_id = 17; /* Create User ID */
    google.protobuf.Timestamp create_time = 18; /* Create Time */
    string update_user_id = 19; /* Update User ID */
    google.protobuf.Timestamp update_time = 20; /* Update Time */
    string create_group_id = 21; /* Create Group ID */
    string intro_typename = 22; /* Type Name */
    int32 schema_id = 23; /* ofSchema Reference */
    string of_type_name = 24; /* ofType Reference */
    repeated IntroTypeInterfacesInput intro_type_interfaces = 25; /* Relationship Object between __Type and __Type */
    repeated IntroTypePossibleTypesInput intro_type_possible_types = 26; /* Relationship Object between __Type and __Type */
    IntroTypeInput input = 27; /* Input */
    IntroTypeExpression where = 28; /* Where */
}
message MutationIntroTypeListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    string name = 4; /* name */
    IntroSchemaInput of_schema = 5; /* ofSchema */
    IntroTypeKind kind = 6; /* kind */
    string description = 7; /* description */
    repeated IntroFieldInput fields = 8; /* fields */
    repeated IntroTypeInput interfaces = 9; /* interfaces */
    repeated IntroTypeInput possible_types = 10; /* possibleTypes */
    repeated IntroEnumValueInput enum_values = 11; /* enumValues */
    repeated IntroInputValueInput input_fields = 12; /* inputFields */
    IntroTypeInput of_type = 13; /* ofType */
    bool is_deprecated = 14; /* Is Deprecated */
    int32 version = 15; /* Version */
    int32 realm_id = 16; /* Realm ID */
    string create_user_id = 17; /* Create User ID */
    google.protobuf.Timestamp create_time = 18; /* Create Time */
    string update_user_id = 19; /* Update User ID */
    google.protobuf.Timestamp update_time = 20; /* Update Time */
    string create_group_id = 21; /* Create Group ID */
    string intro_typename = 22; /* Type Name */
    int32 schema_id = 23; /* ofSchema Reference */
    string of_type_name = 24; /* ofType Reference */
    repeated IntroTypeInterfacesInput intro_type_interfaces = 25; /* Relationship Object between __Type and __Type */
    repeated IntroTypePossibleTypesInput intro_type_possible_types = 26; /* Relationship Object between __Type and __Type */
    repeated IntroTypeInput list = 27; /* Input List */
    IntroTypeExpression where = 28; /* Where */
}
message MutationIntroFieldRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    string name = 4; /* name */
    IntroTypeInput of_type = 5; /* ofType */
    string description = 6; /* description */
    repeated IntroInputValueInput args = 7; /* args */
    IntroTypeInput type = 8; /* type */
    string deprecation_reason = 9; /* deprecationReason */
    bool is_deprecated = 10; /* Is Deprecated */
    int32 version = 11; /* Version */
    int32 realm_id = 12; /* Realm ID */
    string create_user_id = 13; /* Create User ID */
    google.protobuf.Timestamp create_time = 14; /* Create Time */
    string update_user_id = 15; /* Update User ID */
    google.protobuf.Timestamp update_time = 16; /* Update Time */
    string create_group_id = 17; /* Create Group ID */
    string intro_typename = 18; /* Type Name */
    string of_type_name = 19; /* ofType Reference */
    string type_name = 20; /* type Reference */
    IntroFieldInput input = 21; /* Input */
    IntroFieldExpression where = 22; /* Where */
}
message MutationIntroFieldListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    string name = 4; /* name */
    IntroTypeInput of_type = 5; /* ofType */
    string description = 6; /* description */
    repeated IntroInputValueInput args = 7; /* args */
    IntroTypeInput type = 8; /* type */
    string deprecation_reason = 9; /* deprecationReason */
    bool is_deprecated = 10; /* Is Deprecated */
    int32 version = 11; /* Version */
    int32 realm_id = 12; /* Realm ID */
    string create_user_id = 13; /* Create User ID */
    google.protobuf.Timestamp create_time = 14; /* Create Time */
    string update_user_id = 15; /* Update User ID */
    google.protobuf.Timestamp update_time = 16; /* Update Time */
    string create_group_id = 17; /* Create Group ID */
    string intro_typename = 18; /* Type Name */
    string of_type_name = 19; /* ofType Reference */
    string type_name = 20; /* type Reference */
    repeated IntroFieldInput list = 21; /* Input List */
    IntroFieldExpression where = 22; /* Where */
}
message MutationIntroInputValueRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    string name = 4; /* name */
    IntroTypeInput of_type = 5; /* ofType */
    int32 field_id = 6; /* fieldId */
    string directive_name = 7; /* directiveName */
    string description = 8; /* description */
    IntroTypeInput type = 9; /* type */
    string default_value = 10; /* defaultValue */
    bool is_deprecated = 11; /* Is Deprecated */
    int32 version = 12; /* Version */
    int32 realm_id = 13; /* Realm ID */
    string create_user_id = 14; /* Create User ID */
    google.protobuf.Timestamp create_time = 15; /* Create Time */
    string update_user_id = 16; /* Update User ID */
    google.protobuf.Timestamp update_time = 17; /* Update Time */
    string create_group_id = 18; /* Create Group ID */
    string intro_typename = 19; /* Type Name */
    string of_type_name = 20; /* ofType Reference */
    string type_name = 21; /* type Reference */
    IntroInputValueInput input = 22; /* Input */
    IntroInputValueExpression where = 23; /* Where */
}
message MutationIntroInputValueListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    string name = 4; /* name */
    IntroTypeInput of_type = 5; /* ofType */
    int32 field_id = 6; /* fieldId */
    string directive_name = 7; /* directiveName */
    string description = 8; /* description */
    IntroTypeInput type = 9; /* type */
    string default_value = 10; /* defaultValue */
    bool is_deprecated = 11; /* Is Deprecated */
    int32 version = 12; /* Version */
    int32 realm_id = 13; /* Realm ID */
    string create_user_id = 14; /* Create User ID */
    google.protobuf.Timestamp create_time = 15; /* Create Time */
    string update_user_id = 16; /* Update User ID */
    google.protobuf.Timestamp update_time = 17; /* Update Time */
    string create_group_id = 18; /* Create Group ID */
    string intro_typename = 19; /* Type Name */
    string of_type_name = 20; /* ofType Reference */
    string type_name = 21; /* type Reference */
    repeated IntroInputValueInput list = 22; /* Input List */
    IntroInputValueExpression where = 23; /* Where */
}
message MutationIntroEnumValueRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    string name = 4; /* name */
    IntroTypeInput of_type = 5; /* ofType */
    string description = 6; /* description */
    string deprecation_reason = 7; /* deprecationReason */
    bool is_deprecated = 8; /* Is Deprecated */
    int32 version = 9; /* Version */
    int32 realm_id = 10; /* Realm ID */
    string create_user_id = 11; /* Create User ID */
    google.protobuf.Timestamp create_time = 12; /* Create Time */
    string update_user_id = 13; /* Update User ID */
    google.protobuf.Timestamp update_time = 14; /* Update Time */
    string create_group_id = 15; /* Create Group ID */
    string intro_typename = 16; /* Type Name */
    string of_type_name = 17; /* ofType Reference */
    IntroEnumValueInput input = 18; /* Input */
    IntroEnumValueExpression where = 19; /* Where */
}
message MutationIntroEnumValueListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    string name = 4; /* name */
    IntroTypeInput of_type = 5; /* ofType */
    string description = 6; /* description */
    string deprecation_reason = 7; /* deprecationReason */
    bool is_deprecated = 8; /* Is Deprecated */
    int32 version = 9; /* Version */
    int32 realm_id = 10; /* Realm ID */
    string create_user_id = 11; /* Create User ID */
    google.protobuf.Timestamp create_time = 12; /* Create Time */
    string update_user_id = 13; /* Update User ID */
    google.protobuf.Timestamp update_time = 14; /* Update Time */
    string create_group_id = 15; /* Create Group ID */
    string intro_typename = 16; /* Type Name */
    string of_type_name = 17; /* ofType Reference */
    repeated IntroEnumValueInput list = 18; /* Input List */
    IntroEnumValueExpression where = 19; /* Where */
}
message MutationIntroDirectiveRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    string name = 4; /* name */
    IntroSchemaInput of_schema = 5; /* ofSchema */
    string description = 6; /* description */
    repeated IntroDirectiveLocation locations = 7; /* locations */
    repeated IntroInputValueInput args = 8; /* args */
    bool is_repeatable = 9; /* isRepeatable */
    bool is_deprecated = 10; /* Is Deprecated */
    int32 version = 11; /* Version */
    int32 realm_id = 12; /* Realm ID */
    string create_user_id = 13; /* Create User ID */
    google.protobuf.Timestamp create_time = 14; /* Create Time */
    string update_user_id = 15; /* Update User ID */
    google.protobuf.Timestamp update_time = 16; /* Update Time */
    string create_group_id = 17; /* Create Group ID */
    string intro_typename = 18; /* Type Name */
    int32 schema_id = 19; /* ofSchema Reference */
    repeated IntroDirectiveLocationsRelationInput intro_directive_locations_relation = 20; /* Relationship Object between __Directive and locations */
    IntroDirectiveInput input = 21; /* Input */
    IntroDirectiveExpression where = 22; /* Where */
}
message MutationIntroDirectiveListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* id */
    string name = 4; /* name */
    IntroSchemaInput of_schema = 5; /* ofSchema */
    string description = 6; /* description */
    repeated IntroDirectiveLocation locations = 7; /* locations */
    repeated IntroInputValueInput args = 8; /* args */
    bool is_repeatable = 9; /* isRepeatable */
    bool is_deprecated = 10; /* Is Deprecated */
    int32 version = 11; /* Version */
    int32 realm_id = 12; /* Realm ID */
    string create_user_id = 13; /* Create User ID */
    google.protobuf.Timestamp create_time = 14; /* Create Time */
    string update_user_id = 15; /* Update User ID */
    google.protobuf.Timestamp update_time = 16; /* Update Time */
    string create_group_id = 17; /* Create Group ID */
    string intro_typename = 18; /* Type Name */
    int32 schema_id = 19; /* ofSchema Reference */
    repeated IntroDirectiveLocationsRelationInput intro_directive_locations_relation = 20; /* Relationship Object between __Directive and locations */
    repeated IntroDirectiveInput list = 21; /* Input List */
    IntroDirectiveExpression where = 22; /* Where */
}
message MutationIntroTypeInterfacesRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* ID */
    string type_ref = 4; /* __Type Reference */
    IntroTypeInput type = 5; /* __Type */
    string interface_ref = 6; /* __Type Reference */
    IntroTypeInput interface = 7; /* __Type */
    bool is_deprecated = 8; /* Is Deprecated */
    int32 version = 9; /* Version */
    int32 realm_id = 10; /* Realm ID */
    string create_user_id = 11; /* Create User ID */
    google.protobuf.Timestamp create_time = 12; /* Create Time */
    string update_user_id = 13; /* Update User ID */
    google.protobuf.Timestamp update_time = 14; /* Update Time */
    string create_group_id = 15; /* Create Group ID */
    string intro_typename = 16; /* Type Name */
    IntroTypeInterfacesInput input = 17; /* Input */
    IntroTypeInterfacesExpression where = 18; /* Where */
}
message MutationIntroTypeInterfacesListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* ID */
    string type_ref = 4; /* __Type Reference */
    IntroTypeInput type = 5; /* __Type */
    string interface_ref = 6; /* __Type Reference */
    IntroTypeInput interface = 7; /* __Type */
    bool is_deprecated = 8; /* Is Deprecated */
    int32 version = 9; /* Version */
    int32 realm_id = 10; /* Realm ID */
    string create_user_id = 11; /* Create User ID */
    google.protobuf.Timestamp create_time = 12; /* Create Time */
    string update_user_id = 13; /* Update User ID */
    google.protobuf.Timestamp update_time = 14; /* Update Time */
    string create_group_id = 15; /* Create Group ID */
    string intro_typename = 16; /* Type Name */
    repeated IntroTypeInterfacesInput list = 17; /* Input List */
    IntroTypeInterfacesExpression where = 18; /* Where */
}
message MutationIntroTypePossibleTypesRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* ID */
    string type_ref = 4; /* __Type Reference */
    IntroTypeInput type = 5; /* __Type */
    string possible_type_ref = 6; /* __Type Reference */
    IntroTypeInput possible_type = 7; /* __Type */
    bool is_deprecated = 8; /* Is Deprecated */
    int32 version = 9; /* Version */
    int32 realm_id = 10; /* Realm ID */
    string create_user_id = 11; /* Create User ID */
    google.protobuf.Timestamp create_time = 12; /* Create Time */
    string update_user_id = 13; /* Update User ID */
    google.protobuf.Timestamp update_time = 14; /* Update Time */
    string create_group_id = 15; /* Create Group ID */
    string intro_typename = 16; /* Type Name */
    IntroTypePossibleTypesInput input = 17; /* Input */
    IntroTypePossibleTypesExpression where = 18; /* Where */
}
message MutationIntroTypePossibleTypesListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* ID */
    string type_ref = 4; /* __Type Reference */
    IntroTypeInput type = 5; /* __Type */
    string possible_type_ref = 6; /* __Type Reference */
    IntroTypeInput possible_type = 7; /* __Type */
    bool is_deprecated = 8; /* Is Deprecated */
    int32 version = 9; /* Version */
    int32 realm_id = 10; /* Realm ID */
    string create_user_id = 11; /* Create User ID */
    google.protobuf.Timestamp create_time = 12; /* Create Time */
    string update_user_id = 13; /* Update User ID */
    google.protobuf.Timestamp update_time = 14; /* Update Time */
    string create_group_id = 15; /* Create Group ID */
    string intro_typename = 16; /* Type Name */
    repeated IntroTypePossibleTypesInput list = 17; /* Input List */
    IntroTypePossibleTypesExpression where = 18; /* Where */
}
message MutationIntroDirectiveLocationsRelationRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* ID */
    string intro_directive_ref = 4; /* __Directive Reference */
    IntroDirectiveInput intro_directive = 5; /* __Directive */
    IntroDirectiveLocation locations_ref = 6; /* locations Reference */
    bool is_deprecated = 7; /* Is Deprecated */
    int32 version = 8; /* Version */
    int32 realm_id = 9; /* Realm ID */
    string create_user_id = 10; /* Create User ID */
    google.protobuf.Timestamp create_time = 11; /* Create Time */
    string update_user_id = 12; /* Update User ID */
    google.protobuf.Timestamp update_time = 13; /* Update Time */
    string create_group_id = 14; /* Create Group ID */
    string intro_typename = 15; /* Type Name */
    IntroDirectiveLocationsRelationInput input = 16; /* Input */
    IntroDirectiveLocationsRelationExpression where = 17; /* Where */
}
message MutationIntroDirectiveLocationsRelationListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    string id = 3; /* ID */
    string intro_directive_ref = 4; /* __Directive Reference */
    IntroDirectiveInput intro_directive = 5; /* __Directive */
    IntroDirectiveLocation locations_ref = 6; /* locations Reference */
    bool is_deprecated = 7; /* Is Deprecated */
    int32 version = 8; /* Version */
    int32 realm_id = 9; /* Realm ID */
    string create_user_id = 10; /* Create User ID */
    google.protobuf.Timestamp create_time = 11; /* Create Time */
    string update_user_id = 12; /* Update User ID */
    google.protobuf.Timestamp update_time = 13; /* Update Time */
    string create_group_id = 14; /* Create Group ID */
    string intro_typename = 15; /* Type Name */
    repeated IntroDirectiveLocationsRelationInput list = 16; /* Input List */
    IntroDirectiveLocationsRelationExpression where = 17; /* Where */
}